--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "moment": "^2.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-dropzone": "^3.9.2",
     "react-router": "^3.0.2",
     "run-sequence": "^1.2.2",
     "rxjs": "^5.1.0",
+    "superagent": "^3.4.1",
     "systemjs": "^0.20.5",
     "systemjs-builder": "^0.16.2",
     "typings": "^2.1.0"
